# cpp_UnitTest

./: CMakeLists.txt  README.md
src/: Avaliador.cpp  Avaliador.hpp  Lance.cpp  Lance.hpp  Leilao.cpp  Leilao.hpp  Usuario.cpp  Usuario.hpp
tests/: main_test.cpp  test_avaliador.cpp  test_leilao.cpp  test_usuario.cpp
